macro-template/tests/ui/err/strip_prefix_non_integer_range.rs
use macro_template::template;

fn main() {
    template! {
        for C in ('a'..='c').strip_prefix() {
            let _ = C;
        }
    }
}
